istio-bluegreen/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blue-app
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo
      version: blue

  template:
    metadata:
      labels:
        app: demo
        version: blue

    spec:
      containers:
      - name: blue-app

        image: nginxdemos/hello:plain-text

        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 10
