istio-bluegreen/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-service
  namespace: production

spec:
  selector:
    app: demo

  ports:
  - port: 80
    targetPort: 80
    name: http
