istio-bluegreen/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: demo-gateway
  namespace: production

spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:
    - "*"

  ####### TLS configuration (optional) #########

  # servers:
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS

  #   tls:
  #     mode: SIMPLE
  #     credentialName: myapp-tls

  #   hosts:
  #   - myapp.example.com
