istio-bluegreen/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: demo-virtualservice
  namespace: production

spec:
  hosts:
  - "*"

  gateways:
  - demo-gateway

  http:
  - route:

    - destination:
        host: demo-service
        subset: blue
      weight: 0

    - destination:
        host: demo-service
        subset: green
      weight: 100
